docs/pip_install_errors.log
Looking in indexes: http://mirrors.aliyun.com/pypi/simple
Obtaining file:///cugrith/cuda-girth
  Installing build dependencies: started
  Installing build dependencies: finished with status 'done'
  Checking if build backend supports build_editable: started
  Checking if build backend supports build_editable: finished with status 'done'
  Getting requirements to build editable: started
  Getting requirements to build editable: finished with status 'done'
  Installing backend dependencies: started
  Installing backend dependencies: finished with status 'done'
  Preparing editable metadata (pyproject.toml): started
  Preparing editable metadata (pyproject.toml): finished with status 'done'
Requirement already satisfied: numpy>=1.21 in /root/miniconda3/lib/python3.12/site-packages (from cuda-girth==0.1.0) (2.3.2)
Requirement already satisfied: scipy>=1.7 in /root/miniconda3/lib/python3.12/site-packages (from cuda-girth==0.1.0) (1.17.1)
Requirement already satisfied: networkx>=2.6 in /root/miniconda3/lib/python3.12/site-packages (from cuda-girth==0.1.0) (3.5)
Building wheels for collected packages: cuda-girth
  Building editable for cuda-girth (pyproject.toml): started
  Building editable for cuda-girth (pyproject.toml): finished with status 'error'
  error: subprocess-exited-with-error
  
  × Building editable for cuda-girth (pyproject.toml) did not run successfully.
  │ exit code: 1
  ╰─> [74 lines of output]
      2026-06-09 18:08:34,202 - scikit_build_core - WARNING - cmake should not be in build-system.requires - scikit-build-core will inject it as needed
      *** scikit-build-core 0.12.2 using CMake 4.3.2 (editable)
      *** Configuring CMake...
      loading initial cache file /tmp/tmpmbcmnk_c/build/CMakeInit.txt
      -- The CXX compiler identification is GNU 11.4.0
      -- The CUDA compiler identification is NVIDIA 12.8.93 with host compiler GNU 11.4.0
      -- Detecting CXX compiler ABI info
      -- Detecting CXX compiler ABI info - done
      -- Check for working CXX compiler: /usr/bin/g++ - skipped
      -- Detecting CXX compile features
      -- Detecting CXX compile features - done
      -- Detecting CUDA compiler ABI info
      -- Detecting CUDA compiler ABI info - done
      -- Check for working CUDA compiler: /usr/local/cuda-12.8/bin/nvcc - skipped
      -- Detecting CUDA compile features
      -- Detecting CUDA compile features - done
      -- Found CUDAToolkit: /usr/local/cuda-12.8/targets/x86_64-linux/include (found version "12.8.93")
      -- Performing Test CMAKE_HAVE_LIBC_PTHREAD
      -- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
      -- Found Threads: TRUE
      CMake Warning (dev) at /root/miniconda3/lib/python3.12/site-packages/pybind11/share/cmake/pybind11/FindPythonLibsNew.cmake:101 (message):
        Policy CMP0148 is not set: The FindPythonInterp and FindPythonLibs modules
        are removed.  Run "cmake --help-policy CMP0148" for policy details.  Use
        the cmake_policy command to set the policy and suppress this warning, or
        preferably upgrade to using FindPython, either by calling it explicitly
        before pybind11, or by setting PYBIND11_FINDPYTHON ON before pybind11.
      Call Stack (most recent call first):
        /root/miniconda3/lib/python3.12/site-packages/pybind11/share/cmake/pybind11/pybind11Tools.cmake:44 (find_package)
        /root/miniconda3/lib/python3.12/site-packages/pybind11/share/cmake/pybind11/pybind11Common.cmake:237 (include)
        /root/miniconda3/lib/python3.12/site-packages/pybind11/share/cmake/pybind11/pybind11Config.cmake:257 (include)
        CMakeLists.txt:30 (find_package)
      This warning is for project developers.  Use -Wno-dev to suppress it.
      
      CMake Deprecation Warning at /root/miniconda3/lib/python3.12/site-packages/pybind11/share/cmake/pybind11/FindPythonLibsNew.cmake:110 (cmake_policy):
        The OLD behavior for policy CMP0148 will be removed from a future version
        of CMake.
      
        The cmake-policies(7) manual explains that the OLD behaviors of all
        policies are deprecated and that a policy should be set to OLD only under
        specific short-term circumstances.  Projects should be ported to the NEW
        behavior and not rely on setting a policy to OLD.
      Call Stack (most recent call first):
        /root/miniconda3/lib/python3.12/site-packages/pybind11/share/cmake/pybind11/pybind11Tools.cmake:44 (find_package)
        /root/miniconda3/lib/python3.12/site-packages/pybind11/share/cmake/pybind11/pybind11Common.cmake:237 (include)
        /root/miniconda3/lib/python3.12/site-packages/pybind11/share/cmake/pybind11/pybind11Config.cmake:257 (include)
        CMakeLists.txt:30 (find_package)
      
      
      -- Found PythonLibs: /root/miniconda3/lib/libpython3.12.so
      -- Performing Test HAS_FLTO_AUTO
      -- Performing Test HAS_FLTO_AUTO - Success
      -- Configuring done (2.8s)
      -- Generating done (0.0s)
      -- Build files have been written to: /tmp/tmpmbcmnk_c/build
      *** Building project with Ninja...
      [1/13] Building CXX object CMakeFiles/cuda_girth_core.dir/src/host/bfs_state.cpp.o
      [2/13] Building CXX object CMakeFiles/girth_cli.dir/src/host/main.cpp.o
      [3/13] Building CXX object CMakeFiles/cuda_girth_core.dir/src/host/graph_io.cpp.o
      [4/13] Building CXX object CMakeFiles/cuda_girth_core.dir/src/host/girth_engine.cpp.o
      [5/13] Building CXX object CMakeFiles/cuda_girth_core.dir/src/host/batch_engine.cpp.o
      [6/13] Building CXX object CMakeFiles/cuda_girth_core.dir/src/host/csr_builder.cpp.o
      [7/13] Building CUDA object CMakeFiles/cuda_girth_core.dir/src/kernel/reduce_girth.cu.o
      [8/13] Building CUDA object CMakeFiles/cuda_girth_core.dir/src/kernel/frontier_ops.cu.o
      [9/13] Building CXX object CMakeFiles/_core.dir/python/cuda_girth/_bindings.cpp.o
      FAILED: [code=1] CMakeFiles/_core.dir/python/cuda_girth/_bindings.cpp.o
      /usr/bin/g++  -pthread -B /root/miniconda3/compiler_compat -D_core_EXPORTS -I/cugrith/cuda-girth/include -isystem /root/miniconda3/lib/python3.12/site-packages/pybind11/include -isystem /root/miniconda3/include/python3.12 -isystem /usr/local/cuda-12.8/targets/x86_64-linux/include -O3 -DNDEBUG -fPIC -fvisibility=hidden -flto=auto -fno-fat-lto-objects -MD -MT CMakeFiles/_core.dir/python/cuda_girth/_bindings.cpp.o -MF CMakeFiles/_core.dir/python/cuda_girth/_bindings.cpp.o.d -o CMakeFiles/_core.dir/python/cuda_girth/_bindings.cpp.o -c /cugrith/cuda-girth/python/cuda_girth/_bindings.cpp
      /cugrith/cuda-girth/python/cuda_girth/_bindings.cpp: In function ‘cuda_girth::CsrGraph numpy_to_csr(pybind11::array_t<int>, pybind11::array_t<int>)’:
      /cugrith/cuda-girth/python/cuda_girth/_bindings.cpp:22:38: error: expression cannot be used as a function
         22 |     size_t total_edges = buf_ind.size();
            |                          ~~~~~~~~~~~~^~
      [10/13] Building CUDA object CMakeFiles/cuda_girth_core.dir/src/kernel/bfs_level.cu.o
      ninja: build stopped: subcommand failed.
      
      *** CMake build failed
      [end of output]
  
  note: This error originates from a subprocess, and is likely not a problem with pip.
  ERROR: Failed building editable for cuda-girth
Failed to build cuda-girth
ERROR: Could not build wheels for cuda-girth, which is required to install pyproject.toml-based projects
